Dots: set z-index to fix clicking issues with statistics

--- a/src/assets/css/components/dots.css
+++ b/src/assets/css/components/dots.css
@@ -21,6 +21,7 @@
 #dots {
   top: 80px;
   position: absolute;
+  z-index: 500;
 }
 
 #dots > * {
